--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Homepage"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Publications"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Awards"
     url: /teaching/    
     
-  - title: "Portfolio"
+  - title: "Research Projects"
     url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Talks"
     url: /year-archive/
     
-  - title: "CV"
+  - title: "Teaching"
     url: /cv/
     
-  - title: "Guide"
+  - title: "CV"
     url: /markdown/
