--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
+    url: "https://drdanwang.github.io/publications/"#/publications/
 
   - title: "Talks"
     url: /talks/    
