--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links links
 main:
   - title: "Publications"
-    url: "https://drdanwang.github.io/publications/"#/publications/
+    url: https://drdanwang.github.io/publications/ #/publications/
 
   - title: "Talks"
-    url: /talks/    
+    url: https://drdanwang.github.io/talks/    
 
   - title: "Awards"
     url: /teaching/    
