--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Dan WANG"
   avatar           : "profile.png"
-  bio              : "Associate Professor, SHTM, PolyU"
+  bio              : "Associate Professor, School of Hotel and Tourism Management, The Hong Kong Polytechnic University"
   location         : "Hong Kong SAR, China"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
