--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/DrDanWANG/"
+  github           : "https://drdanwang.github.io/"
   google_plus      :
   keybase          :
   instagram        :
