--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Dan WANG"
   avatar           : "profile.png"
-  bio              : "Associate Professor,\n School of Hotel and Tourism Management,\n The Hong Kong Polytechnic University"
+  bio              : "Associate Professor,\n SHTM,\n The Hong Kong Polytechnic University"
   location         : "Hong Kong SAR, China"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
