--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Dan WANG"
   avatar           : "profile.png"
-  bio              : "Associate Professor,\n SHTM,\n PolyU"
+  bio              : "Associate Professor, SHTM, PolyU"
   location         : "Hong Kong SAR, China"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
