--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: https://drdanwang.github.io/publications/ #/publications/
 
   - title: "Talks"
-    url: https://drdanwang.github.io/talks/ #    
+    url: https://drdanwang.github.io/talks/ #/talks/    
 
   - title: "Awards"
     url: https://drdanwang.github.io/teaching/ #/teaching/   
