--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,28 @@ main:
     url: https://drdanwang.github.io/cv/
     
   - title: "Talks"
-    url: https://drdanwang.github.io/year-archive/ 
+    url: https://drdanwang.github.io/year-archive/
+
+  - title: "Publications"
+    url: /publications/
+
+  - title: "Talks"
+    url: /talks/    
+
+  - title: "Teaching"
+    url: /teaching/    
+    
+  - title: "Portfolio"
+    url: /portfolio/
+        
+  - title: "Blog Posts"
+    url: /year-archive/
+    
+  - title: "CV"
+    url: /cv/
+    
+  - title: "Guide"
+    url: /markdown/
     
 
     
