--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,20 @@ main:
   - title: "Publications"
     url: https://drdanwang.github.io/publications/ #/publications/
 
-  - title: "Awards"
-    url: https://drdanwang.github.io/markdown/ #     
+  - title: "Talks"
+    url: https://drdanwang.github.io/talks/ #    
+
+  - title: "Teaching"
+    url: https://drdanwang.github.io/teaching/ #/teaching/   
     
   - title: "Research Projects"
     url: https://drdanwang.github.io/portfolio/ #/portfolio/
         
-  - title: "Talks"
-    url: https://drdanwang.github.io/talks/ #/year-archive/
+  - title: "Talks1"
+    url: https://drdanwang.github.io/year-archive/ #/year-archive/
     
   - title: "Teaching"
-    url: https://drdanwang.github.io/teaching/ #/teaching/  
+    url: https://drdanwang.github.io/cv/ #/cv/
     
-  - title: "CV"
-    url: https://drdanwang.github.io/cv/ ##/cv/
-    
-  - title: "Talks"
-    url: https://drdanwang.github.io/year-archive/ #/markdown/
+  - title: "Awards"
+    url: https://drdanwang.github.io/markdown/ #/markdown/
